Update about section

--- a/src/markdown-pages/stephen.mdx
+++ b/src/markdown-pages/stephen.mdx
@@ -82,7 +82,7 @@ import Slider from "../components/Slider";
   The wearable button is a physical prompt to bring you back to your gameplan
   when it matters most. The software app currently has a rudimentary but
   functional UI, and allows the user to build a modular "gameplan" of strategies
-  to deploy.
+  to deploy in the moment.
 </div>
 
 <img
@@ -239,9 +239,9 @@ import Slider from "../components/Slider";
       further.
     </p>
     <p>
-      {" "}
-      Addiction and related issues represent a huge burden on society - we just need
-      to align ourselves with the objectives of existing support programs and budgets.
+      <br /> Addiction and related issues represent a huge burden on society -
+      we just need to align ourselves with the objectives of existing support
+      programs and budgets.
     </p>
   </div>
 </div>
