--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -10,14 +10,14 @@ Hi! I'm a software developer, currently lead engineer at [AirRobe.](http://airro
 
 I'm also working on a project to help people overcome addictions and unhelpful thought patterns, called [Impulse.](https://impulse.training)
 
-I work with web, mobile and hardware technologies, but also enjoy working with some video animation techniques. My specialties / current focus areas are:
+I work with web, mobile and data engineering technologies and have some hardware experience, but also enjoy working with video animation techniques. My specialties / current focus areas are:
 
 - React Native
 - Typescript / Javascript
 - React / Gatsby / Next.js
 - Web components / Lit
 - Ruby / Rails
-- SQL / Databases
+- Data Engineering (SQL, DBT)
 - Serverless / Firebase
 - Elasticsearch
 - Bluetooth devices
@@ -25,4 +25,4 @@ I work with web, mobile and hardware technologies, but also enjoy working with s
 
 I'm also interested in the startup process, in particular, how to reduce the cost and time that it takes to learn on the way to building something great. I recommend [Lean Stack](https://leanstack.com/) for those interested in the science of successful startups.
 
-I'm a member of the Collaborative VC [Hitchhiker](https://hitchhiker.vc) - we invest in amazing teams and game-changing ventures. I'm always interested in hearing about interesting projects that people are up to. Feel free to [drop me a line!](mailto:hi@michaeldawson.com.au)
+I'm a member of the Collaborative VC [Hitchhiker](https://hitchhiker.vc) - we invest in amazing teams and game-changing ventures. I'm always interested in hearing about interesting projects that people are working on. Feel free to [drop me a line!](mailto:hi@michaeldawson.com.au)
