--- a/src/markdown-pages/stephen.mdx
+++ b/src/markdown-pages/stephen.mdx
@@ -257,12 +257,12 @@ import Slider from "../components/Slider";
     justifyContent: "center",
   }}
 >
-  I am ready to relentlessly pursue this opportunity, but I need to grow the
-  team. I'm looking for a UX lead, and psychologist supervisor for the pilot
-  program. I'm open to finding a co-founder. I'm too early for most funds right
-  now, but with your support we can obtain some real momentum and data from a
-  pilot program, and then raise subsequent rounds. I would like to aim for
-  participation in YC in 6 months.
+  I am ready to relentlessly drive this project, but I need to grow the team.
+  I'm looking for a UX lead, and psychologist supervisor for the pilot program.
+  I'm open to finding a world-class co-founder. I'm too early for most funds
+  right now, but with your support we can obtain some real momentum and data
+  from a pilot program, and then raise subsequent funding. I would like to aim
+  for participation in YC or a similar incubator program in 6 months.
 </div>
 
 <img style={{ width: "100%" }} src="/deck/Impulse-Images.013.jpeg" />
@@ -276,8 +276,9 @@ import Slider from "../components/Slider";
     justifyContent: "center",
   }}
 >
-  I've done this while working full-time at AirRobe. I'm finishing my role at
-  AirRobe on September 30, at which point I'm all-in on Impulse.
+  I've achieved Impulse's early progress while working full-time at AirRobe. I'm
+  finishing my role at AirRobe on September 30, at which point I'm all-in on
+  Impulse.
 </div>
 
 <img style={{ width: "100%" }} src="/deck/Impulse-Images.014.jpeg" />
