Update deck image

--- a/src/markdown-pages/stephen.mdx
+++ b/src/markdown-pages/stephen.mdx
@@ -1,7 +1,7 @@
 ---
 slug: "stephen"
 title: "Hey, Stephen"
-date: "2022-09-13"
+date: "2022-07-13"
 ---
 
 import Slider from "../components/Slider";
@@ -60,8 +60,8 @@ import Slider from "../components/Slider";
   }}
 >
   <h1>
-    It’s my hope that after reading this deck, you will want to become Impulse's
-    lead pre-seed investor, to help bring Impulse to the world.
+    It’s my hope that after reading this deck, you may want to support Impulse
+    along the journey.
   </h1>
 </div>
 
@@ -79,10 +79,9 @@ import Slider from "../components/Slider";
     paddingTop: 100,
   }}
 >
-  The wearable button is a physical prompt to bring you back to your gameplan
-  when it matters most. The software app currently has a rudimentary but
-  functional UI, and allows the user to build a modular "gameplan" of strategies
-  to deploy in the moment.
+  The software app allows for building a modular "gameplan" of tactics to deploy
+  in the moment. The wearable button is a physical prompt to bring you back to
+  your gameplan when it matters most.
 </div>
 
 <img
@@ -234,8 +233,8 @@ import Slider from "../components/Slider";
 >
   <div style={{ flex: 1 }}>
     <p>
-      This pricing model will be tested and iterated on. With your support, we
-      can leverage government and not-for-profit grants to make our dollar go
+      This pricing model will be subject to testing. With your support, we can
+      leverage government and not-for-profit grants to make our dollar go
       further.
     </p>
     <p>
