Update about page

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -6,11 +6,9 @@ order: 1
 icon: Hand_32x32_4
 ---
 
-Hi! I'm a software developer, currently lead engineer at [AirRobe.](http://airrobe.com)
+Hi! I'm a software developer, and the CEO and founder of [impulse](https://impulse.training).
 
-I'm also working on a project to help people overcome addictions and unhelpful thought patterns, called [Impulse.](https://impulse.training)
-
-I work with web, mobile and data engineering technologies and have some hardware experience, but also enjoy working with video animation techniques. My specialties / current focus areas are:
+I work with web, mobile and data engineering technologies:
 
 - React Native
 - Typescript / Javascript
