Add chopin post

--- a/src/markdown-pages/impulse.mdx
+++ b/src/markdown-pages/impulse.mdx
@@ -4,7 +4,8 @@ date: "2021-10-01"
 title: "Impulse"
 icon: Bulb_32x32_4
 desktopIcon: Impulse
+link: https://impulse.training
 order: 2
 ---
 
-Impulse is my passion-project. Subscribe for updates at https://impulse.training
+[Link](https://impulse.training)
