Update markdown pages

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -6,20 +6,15 @@ order: 1
 icon: Hand_32x32_4
 ---
 
-Hi! I'm a software developer, and the CEO and founder of [impulse](https://impulse.training).
+Hi! I'm a software developer, and I work with web, mobile and data engineering technologies. I also enjoy making animation videos with Adobe After Effects. My main software focus areas are:<br />
 
-I work with web, mobile and data engineering technologies:
-
-- React Native
 - Typescript / Javascript
+- React Native
 - React / Gatsby / Next.js
-- Web components / Lit
 - Ruby / Rails
 - Data Engineering (SQL, DBT)
 - Serverless / Firebase
 - Elasticsearch
-- Bluetooth devices
-- After Effects animations
 
 I'm also interested in the startup process, in particular, how to reduce the cost and time that it takes to learn on the way to building something great. I recommend [Lean Stack](https://leanstack.com/) for those interested in the science of successful startups.
 
