--- a/src/markdown-pages/birthday.mdx
+++ b/src/markdown-pages/birthday.mdx
@@ -2,7 +2,8 @@
 slug: "birthday"
 date: "2021-11-06"
 title: "Birthday - share your experience with me?"
-icon: Joy102_32x32_8
+icon: Jdbgmgr100
+order: 3
 ---
 
 ![loop-hole](/blog-images/loop-hole.png)
