--- a/src/markdown-pages/chopin.mdx
+++ b/src/markdown-pages/chopin.mdx
@@ -6,7 +6,7 @@ order: 5
 icon: Confcp1100_32x32_4
 ---
 
-A modern take on Chopin, with a _very modern commentary_ at the bottom of the video<br /> <br />
+A modern take on Chopin, with a _modern commentary_ at the bottom of the video. I enjoyed listening while reading the comments, and reflecting a little on how things change in time! (Better when watched in full-screen mode)<br /> <br />
 
 import Vimeo from "@u-wave/react-vimeo";
 
