--- a/src/markdown-pages/alignment.mdx
+++ b/src/markdown-pages/alignment.mdx
@@ -1,7 +1,7 @@
 ---
 slug: "alignment"
 date: "2021-10-30"
-title: Moderation is a lie
+title: Moderation vs Alignment
 subtitle: ...It's "Alignment" that can set you free
 order: 4
 icon: Url103_32x32_4
@@ -9,12 +9,9 @@ icon: Url103_32x32_4
 
 _Heads up: This post is a cross between a brain-dump, diary entry, and a blog-post, and isn't yet really intended for a public audience. Since writing the first version, a few of these ideas have evolved, in ways that I would be glad to discuss with you! In the meantime, I hope you find it interesting, and I would welcome_ <a href="mailto:hi@michaeldawson.com.au">any feedback.</a>
 
-<pre>
+<pre></pre>
 
-
-</pre>
-
-While we were growing up, my Mother repeated a Maxim to us: “everything in Moderation!”
+While we were growing up, my mum shared a Maxim with us: “everything in Moderation!”
 
 The idea being, of course, that often, a particular thing is not harmful in and of itself, but it’s the excess, or the lack of “Moderation” that can be the problem.
 
@@ -26,7 +23,7 @@ But then one day, having negotiated such triumphs as “ice-cream every second n
 
 I could see it, within my grasp: one gloriously-delicious, yet still undeniably _Moderation-based_ family food pyramid.
 
-Unsurprisingly, mum wasn’t prepared to sanction such a scientific experiment. But still I wasn’t given a satisfying answer as to why my proposition was _truly_ incompatible with her "Moderation Maxim".
+Unsurprisingly, mum wasn’t prepared to sanction such a scientific experiment. But still I wasn’t given a satisfying answer as to why my proposition was _truly_ incompatible with the "Moderation Maxim".
 
 As I grew older, I began to get less interested in junk food “loopholes”, and more interested in other things, including the mental “Loop-Holes” that us humans can sometimes get stuck in. Ones that sometimes look a little like this:
 
@@ -46,7 +43,7 @@ Answer: **there is no limit.**
 
 I have no doubt that chess can remain a harmless or enriching pastime for many, but for me, the infinite possibilities - combined with the rapid-fire succession of novel moves - lead to a neurochemical “perfect storm” of dopamine, adrenaline, cortisol and friends, that was capable of shifting my brain out of “positive” territory and squarely into “unhelpful” land.
 
-As I grew older, I tried leaning on the Maxim of Mother-Moderation in the hope that it would “guard” me from these sorts of excesses and their consequences:
+As I grew older, I tried leaning on the Moderation Maxim in the hope that it would “guard” me from these sorts of excesses and their consequences:
 
 - _“Your policy should be: just a few games, here and there...”_
 - _“Make sure you limit your playing to 1 hour today, so you have time for other important things. Given that you’ve exceeded that limit now, 3 hours should **definitely** be the limit!”_
@@ -56,7 +53,7 @@ As I grew older, I tried leaning on the Maxim of Mother-Moderation in the hope t
 
 ![image](/rails.png)
 
-In the end, my real progress began when I realised that I needed more than what Mother-Moderation could offer me. And that's when I began to form my own principles of _Alignment_, which went on to become the starting point for the [Impulse App](https://impulse.training). These concepts are intended for people who are struggling with "Loop-Hole" patterns of some kind, whether chemical, behavioural, or otherwise.
+In the end, my real progress began when I realised that I needed more than what the Moderation Maxim could offer me. And that's when I began to form my own principles of _Alignment_, which went on to become the starting point for the [Impulse App](https://impulse.training). These concepts are intended for people who are struggling with "Loop-Hole" patterns of some kind, whether chemical, behavioural, or otherwise.
 
 So, what is this concept of Alignment? I like to picture it as a set of rails, like the ones that a train can run on.
 
@@ -82,7 +79,7 @@ After listing the "first" things that come to mind, it's also helpful to identif
 
 For me, my _"Guidelines list"_ of things to avoid includes:
 
-- _Chess_
+- _chess_
 - _googling random thoughts_, and
 - _mindless Youtube browsing_.
 
@@ -135,7 +132,7 @@ For me, my _"Boosters List"_ includes:
 - _stretching for at least 10 minutes_
 - _calling a friend_
 - _reading a book_, and
-- _lying down and doing **absolutely nothing!**_ (that's right, no phone!)
+- _lying down and doing **absolutely [nothing](https://camillestyles.com/wellness/how-to-practice-niksen/)!**_ (that's right, no phone!)
 
 Your turn, to ask yourself:
 **What activities do I really enjoy doing, that are also truly positive and beneficial for me? Can I try to incorporate more of them into my day?**
@@ -158,9 +155,6 @@ What belongs in _your_ list of _Guidelines_ will be different to someone else's.
 
 In any case, it is my hope that by defining these Alignment Rails, those struggling with some of these issues may find themselves suddenly tracking a lot faster in the direction that they want to go... and enjoying the smoother, safer, supercharged ride.
 
-<pre>
-
-
-</pre>
+<pre></pre>
 
 _p.s.: I believe that our experiences, challenges, and learnings will always be uniquely our own. Mum's "Moderation Maxim" provides a nice context for this story and exploration, but I want to add that I'm so grateful for all the lessons, and the foundation of love that was the starting-point in our family. So... thanks, mum 😉❤️_
