--- a/src/markdown-pages/chopin.mdx
+++ b/src/markdown-pages/chopin.mdx
@@ -1,12 +1,19 @@
 ---
 slug: "chopin"
-date: "2021-10-24"
+date: "2022-12-31"
 title: "Chopin"
 order: 5
 icon: Confcp1100_32x32_4
 ---
 
-A modern take on Chopin, with a _modern commentary_ at the bottom of the video. I enjoyed listening while reading the comments, and reflecting a little on how things change in time! (Better when watched in full-screen mode)<br /> <br />
+A modern take on a classic by Chopin, with a _modern commentary_ at the bottom of the video.
+
+<br />
+<br />
+<br />
+I enjoyed listening while reading the comments, and reflecting a little on how things
+change in time! (Better when watched in full-screen mode)
+<br /> <br />
 
 import Vimeo from "@u-wave/react-vimeo";
 
