--- a/src/markdown-pages/venture.mdx
+++ b/src/markdown-pages/venture.mdx
@@ -8,25 +8,25 @@ icon: Wab321019_32x32_4
 
 ## Participatory VC 🧑‍🤝‍🧑
 
-In 2016, I first got a glimpse of what the future of venture finance could look like, when a great friend invited me to help establish a small "participatory" [seed VC in Australia](https://siliconballs.com). 19 of us invested our own money with an equal stake, voting on investments and riding the ups and downs together. Later, with [Hitchhiker](https://hitchhiker.vc), I’ve participated in the same model at a larger scale: professionals from all walks of life, and from all around the world, deploying our pooled resources and sharing the journey.
+In 2016, I first got a glimpse of what the future of venture finance could look like, when a great friend invited me to help establish his concept of a ["participatory" seed VC](https://siliconballs.com). 19 of us invested our own money with an equal stake, voting on investments and riding the ups and downs together. Later, with [Hitchhiker](https://hitchhiker.vc), I’ve participated in the same model at a larger scale: professionals from all walks of life, and from all around the world, deploying our pooled resources and sharing the journey.
 
 ## Networks 🔗
 
-I’m grateful for these experiences, because they've helped to teach me the true power of networks. We have an ambitious goal at [impulse](https://impulse.training), and the way that we’re making it happen is through a system called _Impulse Collective_. Through this system, we're bringing together up to 25 experts in software, hardware, design, data engineering, and psychology, to work with our core team for 1—10 hours per week - in exchange for equity. We love knowing that at seed, members of the _Impulse Collective Founding Team_ will have earned a shareholding that rewards them for their individual contribution. Also, we can already appreciate how that motivates and aligns the network - for everyone's benefit.
+I’m grateful for these experiences, because they've helped to teach me the true power of networks. We have an ambitious goal at [impulse](https://impulse.training), and the way that we’re making it happen is through a system called _Impulse Collective_. Through this system, we're bringing together up to 25 experts in software, hardware, design, data engineering, and psychology, to work with our core team for 1—10 hours per week - in exchange for equity. We love knowing that at seed, members of the _Impulse Collective Founding Team_ will have earned a shareholding that rewards them for their individual contribution. Also, we can already appreciate how that motivates and aligns the network - for everyone's benefit (including our customers'!)
 
 ## The question of terms for investors 📜
 
 But in preparing terms for our pre-seed investment round, we asked ourselves:
 
-> given that there is no way to establish a valuation at our early stage, and no single discount that could truly compensate pre-seed investors for the risks they are taking - how can we genuinely and meaningfully reward our earliest investors?
+> given that there is no way to establish a valuation at our early stage, and no single discount that could fairly compensate pre-seed investors for the risks they are taking and the value that they provide, how can we genuinely and meaningfully reward our earliest investors?
 
 ## MFN SAFE terms: No Cap, No Discount
 
-At this point we met Robert Lee, a veteran of venture finance here in San Francisco. Rob is committed to forging genuine, lasting human relationships over transactional ones, and his [writing on the MFN SAFE](https://fl0wstate.com/mfn_safe/) helped us uncover our answer. Most Favoured Nation pre-seed SAFE terms can be roughly described as “no worse than seed”.
+At this point we met [Robert Lee](https://fl0wstate.com/robert/), a veteran of venture finance here in San Francisco. Rob is committed to building genuine, lasting human relationships over transactional ones, and his writing on the MFN (Most Favoured Nation) SAFE helped us uncover our answer. MFN pre-seed SAFE terms can be thought of rough as “no worse than seed”, and Rob describes these terms as often being "for investors who don't care" (although they have become more well-known after also being incorporated into [YC's latest finance terms](https://www.ycombinator.com/deal)).
 
 ## MFN+Thankyou SAFE (or, "Zero-Sum is Zero-Fun") terms 🤗
 
-Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? With MFN terms, there’s nothing to stop you as a founder offering bonus share grants at seed, so "no worse than seed" needn't translate to "the same as seed". The reason why we can't arrive at a "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners. For taking the pre-seed venture capital risk - we want to say: thank you. But we also want to say thank you for recommending high-performing people for our Impulse Collective program, or for being able to help in other ways. That's the spirit of the MFN+Thankyou SAFE terms, and those are the terms we're offering our earliest investors.
+Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? With MFN terms, there’s nothing to stop you as a founder offering bonus share grants at seed, so "no worse than seed" needn't translate to "the same as seed". The reason why we can't arrive at a "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners. For taking the pre-seed venture capital risk, we want to say: thank you. But we also want to say thank you for recommending high-performing people for Impulse Collective, or for being able to help in other ways. We think of these terms as not so much being for "investors who don't care", as being for "founders who want to say thank you".
 
 ## The negoti-play-tion 😜
 
@@ -36,7 +36,7 @@ When you first offer these terms, don't be surprised if you get an initial:<br/>
 
 <br />
 <br />
-But the spirit of negoti-play-tion is 😛, not 😠. Hopefully, you can communicate
+But the spirit of negoti-play-tion is 😜, not 😠. Hopefully, you can communicate
 that from the start, and you'll end up with something like:
 
 <br />
@@ -63,15 +63,15 @@ VCs will all know Marc Andreeson's quote:
 
 > if a founder can’t navigate a network into a VC firm, it is unlikely that founder has the skills to navigate the other networks required to succeed in building a company.
 
-But here's the question - isn't keeping doors shut in the face of cold calling founders a little [antithetical to the nature of venture](https://medium.com/@DelJohnsonVC/ban-warm-introductions-1e69169d57ba)? It seems to me that [Customer Development](https://steveblank.com/2010/02/25/customer-development-for-web-startups/) skills generally matter more than social engineering skills - especially at the early stage - so if you're an early-stage VC, shutting your doors might keep out capable, customer-aligned founders who just just haven't focused on the mind-games.
+But here's the question - isn't keeping doors shut in the face of cold calling founders a little [antithetical to the nature of venture](https://medium.com/@DelJohnsonVC/ban-warm-introductions-1e69169d57ba)? It seems to me that [Customer Development](https://steveblank.com/2010/02/25/customer-development-for-web-startups/) skills generally matter more than social engineering skills - especially at the early stage - so if you're an early-stage VC, shutting your doors might keep out capable, customer-aligned founders who simply haven't focused on the games.
 
 ## VCs: leave them open - a bit 🚪🔓
 
-I think the best VCs already know that by taking a look at everything that comes their way, they're not missing chances to find a hidden gem. Also, by always being kind, they're maintaing their reputation as an excellent potential partner. That said, you can't maximise your effectiveness if you have the same amount of time for everyone. Your attention is precious, so manage it.
+I think the best VCs already know that by taking a look at everything that comes their way, they're not missing chances to find a hidden gem. Also, by always being kind, they're maintaining their reputation as an excellent potential partner. That said, you can't maximise your effectiveness if you have the same amount of time for everyone. Your attention is precious - so manage it.
 
 ## Founders: Make them want to open it 🚪🤓
 
-As a founder, it's better to understand the dynamics of networks than to not, but I believe that regardless, the best way to "be so good they can't ignore you" (also a quote from Marc) is to focus on delighting your customers.
+As a founder, it's still better to understand the dynamics of networks than to not, but I believe that regardless, the best way to "be so good they can't ignore you" (also a quote from Marc) is to focus on delighting your customers.
 
 ## Premature money is worse than no money 💸
 
@@ -79,7 +79,8 @@ If you raise money too early, you'll probably spend it - and then you'll run out
 
 ## Thankyous 🙌
 
-There’ll be plenty of time for thankyous as we grow, but for now I wanted to say thank you to Amit at [Tau Ventures](https://www.tauventures.com/), for your kind advice, and for allowing us to meet Robert, who has helped to inspire a vision of a future of venture where equity can feel more like a hug, than a handshake \*\*
+Don't forget to say your thankyous, so that people want to keep riding with you!
+For us, there'll be plenty of time for thankyous as we grow, but for now I wanted to say thank you to Amit at [Tau Ventures](https://www.tauventures.com/), for your kind advice, and for allowing us to meet Robert, who has helped to inspire a vision of a future of venture where equity can feel more like a hug, than a handshake \*\*
 
 <br />
 <br />
