Update venture blog page

--- a/src/markdown-pages/venture.mdx
+++ b/src/markdown-pages/venture.mdx
@@ -24,9 +24,9 @@ But in preparing terms for our pre-seed investment round, we asked ourselves:
 
 At this point we met [Robert Lee](https://fl0wstate.com/robert/), a veteran of venture finance here in San Francisco. Rob is committed to building genuine, lasting human relationships over transactional ones, and his writing on the MFN (Most Favoured Nation) SAFE helped us uncover our answer. MFN pre-seed SAFE terms can be thought of rough as “no worse than seed”, and Rob describes these terms as often being "for investors who don't care" (although they have become more well-known after also being incorporated into [YC's latest finance terms](https://www.ycombinator.com/deal)).
 
-## MFN+Thankyou SAFE (or, "Zero-Sum is Zero-Fun") terms 🤗
+## Thankyou SAFE (or, "Zero-Sum is Zero-Fun") terms 🤗
 
-Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? With MFN terms, there’s nothing to stop you as a founder offering bonus share grants at seed, so "no worse than seed" needn't translate to "the same as seed". The reason why we can't arrive at a "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners. For taking the pre-seed venture capital risk, we want to say: thank you. But we also want to say thank you for recommending high-performing people for Impulse Collective, or for being able to help in other ways. We think of these terms as not so much being for "investors who don't care", as being for "founders who want to say thank you".
+Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? The terms that we are offering our investors include a "minimum" SAFE Discount. The reason why we can't arrive at our "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners. For taking the pre-seed venture capital risk, we want to say a big: thank you! But we also want to say thank you for recommending high-performing people for Impulse Collective, or for being able to help in other ways.
 
 ## The negoti-play-tion 😜
 
@@ -48,6 +48,10 @@ that from the start, and you'll end up with something like:
 <br />
 
 So, make those concessions. Print those t-shirts. And cherish the people that wear them.
+
+## In it for the long-haul 🛣️
+
+If MFN terms can be thought of as being "for investors who don't care", we think of our terms as being "for founders who want to say thank you". We're not just looking for a bigger bicep in the same arm-wrestling game. At the end of the day, we understand the economics of VC, and we want to say thank you in a way that makes our investors want to keep on riding with us - well into the future.
 
 ## Coming for the ride 🚐
 
