--- a/src/markdown-pages/venture.mdx
+++ b/src/markdown-pages/venture.mdx
@@ -26,7 +26,7 @@ At this point we met [Robert Lee](https://fl0wstate.com/robert/), a veteran of v
 
 ## Thankyou SAFE (or, "Zero-Sum is Zero-Fun") terms 🤗
 
-Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? The terms that we are offering our investors include a "minimum" SAFE Discount. The reason why we can't arrive at our "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners. For taking the pre-seed venture capital risk, we want to say a big: thank you! But we also want to say thank you for recommending high-performing people for Impulse Collective, or for being able to help in other ways.
+Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? The terms that we are offering our investors include a "minimum" SAFE Discount, and we call them "Thankyou SAFE" terms. For taking the pre-seed venture capital risk, we want to say a big: thank you! But we also want to say thank you for recommending high-performing people for Impulse Collective, or for being able to help in other ways. The reason why we can't arrive at our "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners.
 
 ## The negoti-play-tion 😜
 
@@ -51,7 +51,7 @@ So, make those concessions. Print those t-shirts. And cherish the people that we
 
 ## In it for the long-haul 🛣️
 
-If MFN terms can be thought of as being "for investors who don't care", we think of our terms as being "for founders who want to say thank you". We're not just looking for a bigger bicep in the same arm-wrestling game. At the end of the day, we understand the economics of VC, and we want to say thank you in a way that makes our investors want to keep on riding with us - well into the future.
+If MFN terms can be thought of as being "for investors who don't care", we think of our terms as being "for founders who want to say thank you". We're not just looking for a bigger bicep in the same arm-wrestling game. At the end of the day, we understand the economics of VC, and we want to say thank you in a way that makes our investors want to keep on riding with us, well into the future - even for those who can't help any more than bear some of the (disproportionately high!) early-stage venture finance risk.
 
 ## Coming for the ride 🚐
 
