--- a/src/markdown-pages/venture.mdx
+++ b/src/markdown-pages/venture.mdx
@@ -22,11 +22,11 @@ But in preparing terms for our pre-seed investment round, we asked ourselves:
 
 ## MFN SAFE terms: No Cap, No Discount
 
-At this point we met [Robert Lee](https://fl0wstate.com/robert/), a veteran of venture finance here in San Francisco. Rob is committed to building genuine, lasting human relationships over transactional ones, and his writing on the MFN (Most Favoured Nation) SAFE helped us uncover our answer. MFN pre-seed SAFE terms can be thought of rough as “no worse than seed”, and Rob describes these terms as often being "for investors who don't care" (although they have become more well-known after also being incorporated into [YC's latest finance terms](https://www.ycombinator.com/deal)).
+At this point we met [Robert Lee](https://fl0wstate.com/robert/), a veteran of venture finance here in San Francisco. Rob is committed to building genuine, lasting human relationships over transactional ones, and his writing on the MFN (Most Favoured Nation) SAFE helped us uncover our answer. MFN pre-seed SAFE terms can be thought of rough as “no worse than seed”, and Rob has described these terms as sometimes being "for investors who don't care" (although they have become more well-known after also being incorporated into [YC's latest finance terms](https://www.ycombinator.com/deal)).
 
 ## Thankyou SAFE (or, "Zero-Sum is Zero-Fun") terms 🤗
 
-Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? The terms that we are offering our investors include a "minimum" SAFE Discount, and we call them "Thankyou SAFE" terms. For taking the pre-seed venture capital risk, we want to say a big: thank you! But we also want to say thank you for recommending high-performing people for Impulse Collective, or for being able to help in other ways. The reason why we can't arrive at our "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners.
+Here’s a question: if you’ve run an endurance race with friends, would you prefer to share your hugs and high fives at the starting line... Or after you’ve all made it? We call the terms that we are offering our pre-seed investors "Thankyou SAFE" terms, and they involve a "minimum" Discount, that can be increased, according to a "hidden" formula. For taking the pre-seed venture capital risk, we want to say a <b>big</b>: thank you! But we also want to say thank you for recommending high-performing people for Impulse Collective, or for being able to help in other ways. The reason why we can't arrive at our "thankyou" number now is because we don't know what that shared journey will look like with each of our investor partners. If MFN terms can be thought of as being "for investors who don't care", then we like to think of our terms as being "for founders who want to say thank you".
 
 ## The negoti-play-tion 😜
 
@@ -51,7 +51,7 @@ So, make those concessions. Print those t-shirts. And cherish the people that we
 
 ## In it for the long-haul 🛣️
 
-If MFN terms can be thought of as being "for investors who don't care", we think of our terms as being "for founders who want to say thank you". We're not just looking for a bigger bicep in the same arm-wrestling game. At the end of the day, we understand the economics of VC, and we want to say thank you in a way that makes our investors want to keep on riding with us, well into the future - even for those who can't help any more than bear some of the (disproportionately high!) early-stage venture finance risk.
+When you say your thank-yous, do so in a way that makes them everyone - including your investors - want to keep on riding with you, well into the future. The (disproportionately high!) early-stage venture finance risk might come with large upside potential, but the economics of VC don't make it as easy as some on the outside might think.
 
 ## Coming for the ride 🚐
 
@@ -59,7 +59,7 @@ Through Hitchhiker, I’ve been fortunate to see what “coming along for the ri
 
 ## "Who here can change a tire?" 👩‍🔧
 
-What's more, as founders, you're better equipped to get through your difficult moments when you really know who's with you in the van. Get to know your network, and don’t be afraid to (respectfully!) ask for help - if and when you need it.
+As founders, you're also better equipped to get through your difficult moments when you really know who's with you in the van. Get to know your network, and don’t be afraid to (respectfully!) ask for help - if and when you need it.
 
 ## The problem of shut doors 🚪
 
