--- a/src/markdown-pages/chopin.mdx
+++ b/src/markdown-pages/chopin.mdx
@@ -17,7 +17,22 @@ change in time! (Better when watched in full-screen mode)
 
 import Vimeo from "@u-wave/react-vimeo";
 
-<Vimeo video="785437528" width={800} showTitle={false} playsInline={false} />
+<div style={{ padding: "56.25% 0 0 0", position: "relative" }}>
+  <iframe
+    src="https://player.vimeo.com/video/785437528?h=dde44f1312"
+    style={{
+      position: "absolute",
+      top: 0,
+      left: 0,
+      width: "100%",
+      height: "100%",
+    }}
+    frameborder="0"
+    allow="autoplay; fullscreen; picture-in-picture"
+    allowfullscreen
+  ></iframe>
+</div>
+<script src="https://player.vimeo.com/api/player.js"></script>
 
 <br />
 [Original](https://soundcloud.com/chopin-frederic/nocturne-op9-no2)
