Update impulse icon link

--- a/src/markdown-pages/impulse.mdx
+++ b/src/markdown-pages/impulse.mdx
@@ -4,8 +4,8 @@ date: "2021-10-01"
 title: "Impulse"
 icon: Bulb_32x32_4
 desktopIcon: Impulse
-link: https://impulse.training
+link: https://testflight.apple.com/join/5qDMyf7R
 order: 2
 ---
 
-[Link](https://impulse.training)
+[Link](https://testflight.apple.com/join/5qDMyf7R)
