Add will to thrive post draft

--- a/src/markdown-pages/actionpact.mdx
+++ b/src/markdown-pages/actionpact.mdx
@@ -2,8 +2,7 @@
 slug: "actionpact"
 date: "2021-11-01"
 title: "ActionPact"
-desktopIcon: ActionPact
-order: 4
+startBarTitle: Actionpact
 icon: Joy102_32x32_8
 ---
 
