--- a/src/markdown-pages/alignment.mdx
+++ b/src/markdown-pages/alignment.mdx
@@ -3,6 +3,7 @@ slug: "alignment"
 date: "2021-10-30"
 title: Moderation vs Alignment
 subtitle: ...It's "Alignment" that can set you free
+startBarTitle: "Moderation / Alignment"
 order: 4
 icon: Url103_32x32_4
 ---
