--- a/src/markdown-pages/intronet.mdx
+++ b/src/markdown-pages/intronet.mdx
@@ -4,6 +4,7 @@ date: "2021-10-01"
 title: "Intronet"
 icon: Bulb_32x32_4
 desktopIcon: null
+startBarTitle: "Intronet"
 link: https://intronet-88bc5.web.app
 order: 3
 ---
