--- a/src/markdown-pages/venture.mdx
+++ b/src/markdown-pages/venture.mdx
@@ -3,6 +3,7 @@ slug: "venture"
 date: "2023-01-24"
 title: "The Future Of Venture"
 order: 4
+startBarTitle: "Venture thoughts"
 icon: Wab321019_32x32_4
 ---
 
