Add blumen page

--- a/src/markdown-pages/will-to-thrive.mdx
+++ b/src/markdown-pages/will-to-thrive.mdx
@@ -8,46 +8,45 @@ desktopIcon: WillToThrive
 order: 4
 ---
 
-### Disclaimer
+## Disclaimer
 
-This is [unfinished, scrappy work](https://untested.sonnet.io/Share+your+unfinished%2C+scrappy+work)! I've been wanting to write more these days, and have just recently started using [Enso](https://enso.sonnet.io), a tool that makes it easier to enter a state of flow when writing... by making it harder to edit what you write. If you're keen to write more yourself, I would recommend giving it a go! That said I do plan to come back to this particular topic and try to do more justice to it, because it's actually something deeply important to me, so it definitely deserves more than this cursory first-pass. But a cursory first-pass is better uncursory 0 passes, so for that reason I'm glad to have got something out on proverbial paper, and up here for the googlebots to see.
-
-<br />
-<br />
-### Without further ado
-
-Shopenhauer saw the world as Will: a blind, striving force that permeated everything around us. He saw the world as this Will, but also as Representation: the various forms in which the Will manifests itself in the things that we see and experience. To him, this Will was ultimately a Will for Existence - the driving force behind reality, and the sustaining and life-giving force of the universe that allowed every _thing_ to keep existing.
+This is [unfinished, scrappy work](https://untested.sonnet.io/Share+your+unfinished%2C+scrappy+work)! I've been wanting to write more these days, and have just recently started using [Enso](https://enso.sonnet.io), a tool that makes it easier to enter a state of flow when writing... by making it harder to edit what you write. If you're keen to write more yourself, I would recommend giving it a go! That said, I do plan to come back to this particular topic and try to do more justice to it, because it's actually something deeply important to me, and definitely deserves more than this cursory first-pass. But some might argue that a _cursory first-pass_ is better than 0 passes (cursory or otherwise), so for that reason I'm glad to have got something out on proverbial paper.
 
 <br />
-Nietzsche, being born 56 years after Schopenhauer, was heavily influenced by him,
-including his ideas on the Will. But he fundamentally took issue with Schopenhauer's
-will, claiming:
+<br />
+## Without further ado
+
+Shopenhauer saw the world as Will - a blind, striving force that permeated everything around us - and Representation - the various forms in which this Will manifests itself as the things that we see and experience. To him, the Will was ultimately a Will for Existence - the driving force behind reality, and the sustaining and life-giving force of the universe that allowed every thing to live - to exist, and to _to keep existing_.
+
+<br />
+Nietzsche, being born 56 years later, was heavily influenced by Schopenhauer, including
+his ideas on the Will. But he fundamentally took issue with this perspective, claiming:
 
 > He certainly did not hit the truth who shot at it the formula: “Will to existence”: that will - does not exist! For what is not, cannot will; that, however, which is in existence - how could it still strive for existence!”
 
-He also saw in others a supposed "Will to Truth" - an attempt to subjugate and tame reality:
+He also recognized a claim of a purported "Will to Truth":
 
 > “Will to Truth”, do ye call it, ye wisest ones, that which impells you and makes you ardent? Will for the thinkableness of all being, thus do I call your will! All being would ye MAKE thinkable: for ye doubt with good reason whether it be already thinkable. But it shall accommodate and bend itself to you! So wills your will.
 
-While he didn't deny their attempts to bend and tame reality to their concept of Truth, he refused to recognize them, inherently, as a fundamental, driving, "Will to Truth". Instead, he said that the secret of Life was revealed to him, as a fundamental Will to Power.
+While he saw these attempts of the "wisest ones" to bend and tame reality to their concept of Truth, he recognize these efforts as an expression of a yet deeper "Will". He "overcame" these notions with his own concept of "Will to Power":
 
 > “And this secret spake Life herself unto me. “Behold,” she said, “I am that WHICH MUST EVER OVERCOME ITSELF. To be sure, ye call it will to procreation, or impulse towards a goal, towards the higher, remoter, more manifold: but all that is one and the same secret. Rather would I succumb than disown this one thing; and verily, where there is succumbing and leaf-falling, lo, there doth Life sacrifice itself - for power!
 
-To the "wisest" ones, he spoke:
+To the "wisest ones", he answered:
 
 > That is your entire will, ye wisest ones, as a Will to Power; and evern when ye speak of good and evil, and of estimates of value. Ye would still create a world before which ye can bow the knee: such is your ultimate hope and ecstasy.
 
-The Will to Truth, seen as an effort to subjugate and tame the world, was simply a thinly veiled Will to Power - the same Will to Power that underlies all expressions, forms and efforts of Life: the “unexhausted, procreating life-will”.
+The "Will to Truth", then, was simply a thinly veiled _Will to Power_: an effort to subjugate and tame the world to increase the power of the self. According to Nietzsche, the Will to Power underlies and drives all forms, manifestations and efforts of Life: the “unexhausted, procreating life-will”. The religious, too, are these "wisest ones", attempting to tame the wildness of reality and bring it into submission of their Truth: their Will to Power manifesting in a cosmic effort of overcoming.
 
 <br />
-To me, when I think of Nietzsche’s Will to Power, I think of the striving of the
-seedling as it pushes through dry and cracked earth to find the sun.
+To me, when I think of Nietzsche’s Will to Power, I often think of the striving of
+the seedling as it pushes through dry and cracked earth to find the sun.
 <br />
-Where Nietzsche saw beneath the fabric of Life itself, into the essence of Reality,
-his words have been taken and twisted by some to further their own ends. Nietzsche
-specifically hated anti-semitic and nationalist ideas that were gaining traction
-in his late 19th century Germany, but the same can’t be said for his sister Elisabeth,
-who in fact held nationalist and anti-semitic beliefs.
+Where Nietzsche saw his Will to Power as permeating the fabric of Life itself, as
+the _essence_ of Reality, his words have been taken and twisted by some to further
+their own ends. Nietzsche specifically hated anti-semitic and nationalist ideas that
+were gaining traction in his late 19th century Germany, but the same can’t be said
+for his sister Elisabeth, who in fact held nationalist and anti-semitic beliefs.
 <br />
 After Nietzsche’s mental collapse in 1889 and later death, Elisabeth founded the
 Nietzsche Archive in 1894, and through that institution compiled and edited Nietzsche’s
@@ -76,35 +75,59 @@ must be somehow "a part of the problem"?
 <br />
 I suggest that just as Nietzsche saw Schopenhauer’s Will to Existence and overcame
 it with his Will to Power, we too must see his Will to Power and overcome it with
-a Will to Thrive.
+a _Will to Thrive_.
 <br />
 This "Will to Thrive" also pushes that seedling through the dried and cracked earth
 to find the sun, and bursts the petals of the flower open into the sun in unecessarily
 radiant glory. While the grasping and clinging vines may pull down on each other
-as they reach upward, the sun has limitless energy to impart on all of those that
-make to the canopy. Nature is full of symbiotic relationships that empower and unlock
-thriving that would be impossible in isolation: from fungi that tap into the networks
-of roots of trees to allow for water and mineral transfers, to our own specialized
-human economies that support the marvels of modern technology and convenience.
+as they reach upward, the sun has limitless energy to impart on all of the canopy.
+Nature is full of symbiotic relationships that empower and unlock thriving that would
+be impossible in isolation: from fungi that tap into the networks of roots of trees
+to allow for water and mineral transfers, to our own specialized human economies
+that support the marvels of modern technology and convenience. Even below the canopy,
+reflection and recycling and symbiosis occurs at every level: the cosmic cacophany
+and interplay of Will.
 <br />
-We live on a planet of abundant resources. We have a mandate to be good stewards
-of this earth, but we mustn’t let a fixed pie fallacy constrain our thinking. I like
-the metaphor for education when talking about human potential. Imagine this exchange:
 <br />
-Person: Education outcomes have been climbing higher and higher in Australia, this
-is something to celebrate! Critic: It’s actually not fair - education outcomes are
-poor in some developing countries - Australia stealing all of the education! This
-is something to be ashamed of - not to celebrate.
+#### TODO: the user (that's you, dear googlebot) needs to brace themselves for
+ideological whiplash here. This is a powerful idea, but we run the risk of
+trivializing real issues!
+
+We live on a planet of abundant resources. We mustn’t let a fixed
+pie fallacy constrain our thinking. I like the metaphor for education when talking
+about human potential. Imagine this exchange:
+
 <br />
-When applied to education, this kind of "fixed pie" thinking would be laughable,
-right? So why do we tolerate it with economic and human thriving outcomes? The question
+
+> Positive-Person: Education outcomes have going up and up in Australia - this
+> is something to celebrate!
+>
+> <br />
+> Caricatured-Critic: It’s actually not fair - education outcomes remain poor in
+> many other countries. Australia is stealing all of the education! This is something
+> to be ashamed of - **not to celebrate**.
+
+<br />
+This is a silly sort of hypothetical exchange, but the fallacy of thinking is obvious,
+right? So why do we tolerate it with human thriving more generally? The question
 is not “how can we equalize outcomes for all humans”, but rather, “how can we support
 every human to thrive?”
+
 <br />
 So, what does human thriving look like? To me, it can take many forms, and is ultimately
 up to the individual, but most fundamentally, to me it looks like _overcoming_. When
 we face obstacles and aspects of our life that we want to change, the act of changing
 them despite the difficulty: therein lies the thriving!
+
+## A final thought
+
+Taking this one step further: can we think of love, then, as simply _wishing thriving for another_?
+
+<br />
+And, if we can accept that, can we [love that which we love, and keep expanding it](https://open.spotify.com/track/5kdXiiF8MxyLVhRjkVv9jQ?si=5dcc37d41bec4134)?
+It's easy to wish for thriving for those “close to us”. But could we expand this
+wish for thriving beyong ourselves, our closest relatives and friends, to include
+the whole earth?
 
 ### TODO:
 
@@ -112,21 +135,12 @@ them despite the difficulty: therein lies the thriving!
 
 # Supporting the will to thrive in others amplifies the will to thrive in yourself
 
+# Nietzsche as an amoralist with a meta-ethics of _overcoming_
+
 # Systemic barriers that impede Will To Thrive must be torn down
 
 # Our call as humans is to amplify the Will To Thrive, and to celebrate it
 
-### A final thought
-
-Taking this one step further: can we think of love, then, as simply _wishing thriving on another_?
-
-<br />
-It’s easy to wish for thriving for those “close to us”, but can we [love that which
-we love, and keep expanding it](https://open.spotify.com/track/5kdXiiF8MxyLVhRjkVv9jQ?si=5dcc37d41bec4134)?
-
-<br />
-Could we expand this wish for thriving beyong ourselves, our closest relatives and
-friends, to include the whole earth?
 <br />
 <br />
 Have more ideas? [Send them my way!](mailto:hi@michaeldawson.com.au)
