Link to parents site

--- a/src/markdown-pages/blumen.mdx
+++ b/src/markdown-pages/blumen.mdx
@@ -11,7 +11,7 @@ Hi Blumen team! I heard that you are growing fast and have some currently open r
 <br />I am a full-stack web, mobile, and data engineer with over 12 years of
 experience working with technologies such as Ruby on Rails,
 JavaScript/TypeScript, React, React Native (Expo), Elasticsearch, AWS/Firebase,
-SQL, Snowflake, and DBT, and recently, OpenAI APIs and agentic frameworks such
+SQL, Snowflake, DBT, and recently, OpenAI APIs, RAG and agentic frameworks such
 as llamaindex. I'm currently open to contract work opportunities and would love
 to learn more about your projects, challenges, and how I might be able to
 contribute to your team.
@@ -20,19 +20,24 @@ contribute to your team.
 I'm the founder of [impulse](https://impulse.training), and we're helping people
 overcome addictions and other unwanted patterns of thinking and behavior. In my most
 recent role, I led the engineering team at an Australian consumer marketplace and
-data startup, where I contributed to the company’s growth from a $0.6M to a $34M
-valuation in just two years. I am passionate about building high-performing teams
-and processes, such as mob programming, but I also love grinding away at tough technical
-problems.
+data startup, as we grew from a $0.6M to a $34M valuation in 2 years. I am passionate
+about building high-performing teams and processes, such as mob programming, but
+I also love grinding away at tough technical problems.
 <br />
 
 I am seeking a 3-6 month contract where I can bring a ton of value to a
 growing team. If my experience aligns with your needs, I would be really happy
-to discuss how I can support your team. I am open to working at a discounted
-rate and would be happy to volunteer some time initially to ensure a good fit
-between us.
+to discuss how I can support! I am open to working at a discounted
+rate and would be happy to volunteer some time initially to ensure there's a good fit.
 
 <br />
 Cheers!
+
 <br />
+
 ~M
+
+<br />
+<br />
+<br />
+[Say hi](mailto:hi@michaeldawson.com.au)
